--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1>Space invaders</h1>
 
     <canvas id="brett"></canvas>
-    <script src="script.js"></script>
+
+    <script src="script2.js"></script>
 </body>
 </html>
