Oppdateringer (mye greier)

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
     <canvas id="brett"></canvas>
 
+    <button id="restart">Restart</button>
+
     <script src="script2.js"></script>
 </body>
 </html>
