--- a/nettsider/spill.html
+++ b/nettsider/spill.html
@@ -13,7 +13,7 @@
 <body>
     <div class="navbar">
         <div class="logo">
-            <a href="index.html"><img src="https://raw.githubusercontent.com/ImKennyYip/space-invaders/master/alien-magenta.png" alt="Angriperbilde" id="logoBilde"></a>
+            <a href="/index.html"><img src="https://raw.githubusercontent.com/ImKennyYip/space-invaders/master/alien-magenta.png" alt="Angriperbilde" id="logoBilde"></a>
 
             <i class="fa-solid fa-bars"></i>
         </div>
