--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
-    <link rel="stylesheet" href="/style/styleNav.css">
+    <link rel="stylesheet" href="style/styleNav.css">
 
 
     <title>Space Invader</title>
@@ -18,9 +18,9 @@
             <i class="fa-solid fa-bars"></i>
         </div>
         <div class="nav"> 
-            <a href="spill.html">Spill</a>
-            <a href="leaderBoard.html">LeaderBoard</a>
-            <a href="tilbakemelding.html">Tilbakemelding</a>
+            <a href="nettsider/spill.html">Spill</a>
+            <a href="nettsider/leaderBoard.html">LeaderBoard</a>
+            <a href="nettsider/tilbakemelding.html">Tilbakemelding</a>
         </div>
     </div>
 
