Egen js for leaderboard, henter leaderboard som array

--- a/nettsider/leaderBoard.html
+++ b/nettsider/leaderBoard.html
@@ -23,7 +23,8 @@
         </div>
     </div>
 
-    <table>
+
+     <table id="leaderBoard">
         <thead>
             <tr>
                 <th>Ranking</th>
@@ -32,7 +33,8 @@
             </tr>
         </thead>
         <tbody>
-            <tr>
+<!-- 
+              <tr>
                 <td>1</td>
                 <td></td>
                 <td></td>
@@ -56,10 +58,11 @@
                 <td>7</td>
                 <td></td>
                 <td></td>
-            </tr>
-        
+            </tr> -->
+ 
         </tbody>
-    </table>
+    </table> 
     
+    <script src="/scriptLeaderBoard.js"></script>
 </body>
 </html>
