--- a/nettsider/spill.html
+++ b/nettsider/spill.html
@@ -26,20 +26,20 @@
         <canvas id="brett"></canvas>
 
     <div id="knapper">
-        <div id="start" class="vis"><i class="fa-solid fa-play"></i></div>
-        <div id="restart" class="gjem"><i class="fa-solid fa-arrows-rotate"></i></div>
-        <div id="volum" class="gjem" ><i class="fa-solid fa-volume-xmark"></i></div>
+        <button id="start" class="vis" aria-label="startknapp"><i class="fa-solid fa-play"></i></button>
+        <button id="restart" class="gjem"><i class="fa-solid fa-arrows-rotate"></i></button>
+        <button id="volum" class="gjem" ><i class="fa-solid fa-volume-xmark"></i></button>
 
     </div>
 
-    <div id="lagre" class="gjem"> <i class="fa-solid fa-download"></i> </div>
+    <button id="lagre" class="gjem"> <i class="fa-solid fa-download"></i> </button>
     <div id="input" class="gjem">
         <p>Skriv inn navnet ditt: <input id="navn" type="text"></p>
     </div>
-    <div id="leggTil" class="gjem" >Legg til i Leaderboard</div>
+    <button id="leggTil" class="gjem" >Legg til i Leaderboard</button>
 
 
 
-    <script src="/script2.js"></script>
+    <script src="/script.js"></script>
 </body>
 </html>
