--- a/index.html
+++ b/index.html
@@ -24,19 +24,6 @@
         </div>
     </div>
 
-    <script>
-        /* Henter hamburgerelementet */
-        const burgerEl = document.querySelector('.fa-bars')
-
-        /* Henter navelementet */
-        const navEl = document.querySelector('.nav')
-
-        burgerEl.addEventListener('click', showNav)
-
-        function showNav(){
-            navEl.classList.toggle('show')
-        }
-
-    </script>
+    <script src="/script/scriptFelles.js"></script>
 </body>
 </html>
