--- a/nettsider/spill.html
+++ b/nettsider/spill.html
@@ -26,7 +26,7 @@
         <canvas id="brett"></canvas>
 
     <div id="knapper">
-        <button id="start" class="vis" aria-label="startknapp"><i class="fa-solid fa-play"></i></button>
+<!--         <button id="start" class="vis" aria-label="startknapp"><i class="fa-solid fa-play"></i></button> -->
         <button id="restart" class="gjem"><i class="fa-solid fa-arrows-rotate"></i></button>
         <button id="volum" class="gjem" ><i class="fa-solid fa-volume-xmark"></i></button>
 
@@ -39,7 +39,7 @@
     <button id="leggTil" class="gjem" >Legg til i Leaderboard</button>
 
 
-
-    <script src="/script.js"></script>
+    <script src="/script/scriptFelles.js"></script>
+    <script src="/script/scriptSpill.js"></script>
 </body>
 </html>
