--- a/nettsider/leaderBoard.html
+++ b/nettsider/leaderBoard.html
@@ -23,6 +23,7 @@
         </div>
     </div>
 
+        <h1>World Ranking</h1>
 
      <table id="leaderBoard">
         <thead>
@@ -32,37 +33,9 @@
                 <th>Score</th>
             </tr>
         </thead>
-        <tbody>
-<!-- 
-              <tr>
-                <td>1</td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr>
-                <td>2</td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr>
-                <td>3</td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr>
-                <td>4</td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr>
-                <td>7</td>
-                <td></td>
-                <td></td>
-            </tr> -->
- 
-        </tbody>
     </table> 
     
-    <script src="/scriptLeaderBoard.js"></script>
+    <script src="/script/scriptFelles.js"></script>
+    <script src="/script/scriptLeaderBoard.js"></script>
 </body>
 </html>
