--- a/nettsider/leaderBoard.html
+++ b/nettsider/leaderBoard.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Space invaders</title>
+    <title>LeaderBoard</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <link rel="stylesheet" href="/style/styleNav.css">
     <link rel="stylesheet" href="/style/StyleLeaderBoard.css">
+
+
 </head>
 <body>
     <div class="navbar">
