--- a/nettsider/spill.html
+++ b/nettsider/spill.html
@@ -25,6 +25,12 @@
     </div>
         <canvas id="brett"></canvas>
 
+    <div id="kontroller" class="gjem">
+        <button id="venstre"><i class="fa-solid fa-left-long"></i></button>
+        <button id="skyt"><i class="fa-solid fa-gun"></i></button>
+        <button id="hoyre"><i class="fa-solid fa-right-long"></i></button>
+
+    </div>    
     <div id="knapper">
 <!--         <button id="start" class="vis" aria-label="startknapp"><i class="fa-solid fa-play"></i></button> -->
         <button id="restart" class="gjem"><i class="fa-solid fa-arrows-rotate"></i></button>
