--- a/nettsider/leaderBoard.html
+++ b/nettsider/leaderBoard.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LeaderBoard</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
-    <link rel="stylesheet" href="/style/styleNav.css">
-    <link rel="stylesheet" href="/style/StyleLeaderBoard.css">
+    <link rel="stylesheet" href="style/styleNav.css">
+    <link rel="stylesheet" href="style/StyleLeaderBoard.css">
 
 
 </head>
@@ -37,7 +37,7 @@
         </thead>
     </table> 
     
-    <script src="/script/scriptFelles.js"></script>
-    <script src="/script/scriptLeaderBoard.js"></script>
+    <script src="script/scriptFelles.js"></script>
+    <script src="script/scriptLeaderBoard.js"></script>
 </body>
 </html>
