--- a/nettsider/leaderBoard.html
+++ b/nettsider/leaderBoard.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LeaderBoard</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
-    <link rel="stylesheet" href="style/styleNav.css">
-    <link rel="stylesheet" href="style/StyleLeaderBoard.css">
+    <link rel="stylesheet" href="/style/styleNav.css">
+    <link rel="stylesheet" href="/style/StyleLeaderBoard.css">
 
 
 </head>
@@ -19,9 +19,9 @@
             <i class="fa-solid fa-bars"></i>
         </div>
         <div class="nav"> 
-            <a href="spill.html">Spill</a>
-            <a href="leaderBoard.html">LeaderBoard</a>
-            <a href="tilbakemelding.html">Tilbakemelding</a>
+            <a href="/nettsider/spill.html">Spill</a>
+            <a href="/nettsider/leaderBoard.html">LeaderBoard</a>
+            <a href="/nettsider/tilbakemelding.html">Tilbakemelding</a>
         </div>
     </div>
 
@@ -37,7 +37,7 @@
         </thead>
     </table> 
     
-    <script src="script/scriptFelles.js"></script>
-    <script src="script/scriptLeaderBoard.js"></script>
+    <script src="/script/scriptFelles.js"></script>
+    <script src="/script/scriptLeaderBoard.js"></script>
 </body>
 </html>
