--- a/nettsider/spill.html
+++ b/nettsider/spill.html
@@ -26,23 +26,23 @@
         <canvas id="brett"></canvas>
 
     <div id="kontroller" class="gjem">
-        <button id="venstre"><i class="fa-solid fa-left-long"></i></button>
-        <button id="skyt"><i class="fa-solid fa-gun"></i></button>
-        <button id="hoyre"><i class="fa-solid fa-right-long"></i></button>
+        <button id="venstre" aria-label="venstreknapp"><i class="fa-solid fa-left-long"></i></button>
+        <button id="skyt" aria-label="skytknapp"><i class="fa-solid fa-gun"></i></button>
+        <button id="hoyre" aria-label="hoyreknapp" ><i class="fa-solid fa-right-long"></i></button>
 
     </div>    
     <div id="knapper">
 <!--         <button id="start" class="vis" aria-label="startknapp"><i class="fa-solid fa-play"></i></button> -->
-        <button id="restart" class="gjem"><i class="fa-solid fa-arrows-rotate"></i></button>
-        <button id="volum" class="gjem" ><i class="fa-solid fa-volume-xmark"></i></button>
+        <button id="restart" aria-label="restartknapp"class="gjem"><i class="fa-solid fa-arrows-rotate"></i></button>
+        <button id="volum" aria-label="volumknapp" class="gjem" ><i class="fa-solid fa-volume-xmark"></i></button>
 
     </div>
 
-    <button id="lagre" class="gjem"> <i class="fa-solid fa-download"></i> </button>
+    <button id="lagre" aria-label="lagreknapp" class="gjem"> <i class="fa-solid fa-download"></i> </button>
     <div id="input" class="gjem">
         <p>Skriv inn navnet ditt: <input id="navn" type="text"></p>
     </div>
-    <button id="leggTil" class="gjem" >Legg til i Leaderboard</button>
+    <button id="leggTil" aria-label="leggtilknapp"class="gjem" >Legg til i Leaderboard</button>
 
 
     <script src="/script/scriptFelles.js"></script>
