--- a/nettsider/leaderBoard.html
+++ b/nettsider/leaderBoard.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LeaderBoard</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
-    <link rel="stylesheet" href="/style/styleNav.css">
+    <link rel="stylesheet" href="/style/styleFelles.css">
     <link rel="stylesheet" href="/style/StyleLeaderBoard.css">
 
 
