--- a/nettsider/spill.html
+++ b/nettsider/spill.html
@@ -7,7 +7,7 @@
     <title>Spill</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
-    <link rel="stylesheet" href="/style/styleNav.css">
+    <link rel="stylesheet" href="/style/styleFelles.css">
     <link rel="stylesheet" href="/style/stylesSpill.css">
 </head>
 <body>
