--- a/nettsider/spill.html
+++ b/nettsider/spill.html
@@ -7,8 +7,8 @@
     <title>Spill</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
-    <link rel="stylesheet" href="/style/styleFelles.css">
-    <link rel="stylesheet" href="/style/stylesSpill.css">
+    <link rel="stylesheet" href="../style/styleFelles.css">
+    <link rel="stylesheet" href="../style/stylesSpill.css">
 </head>
 <body>
     <div class="navbar">
@@ -45,7 +45,7 @@
     <button id="leggTil" aria-label="leggtilknapp"class="gjem" >Legg til i Leaderboard</button>
 
 
-    <script src="/script/scriptFelles.js"></script>
-    <script src="/script/scriptSpill.js"></script>
+    <script src="../script/scriptFelles.js"></script>
+    <script src="../script/scriptSpill.js"></script>
 </body>
 </html>
