--- a/nettsider/tilbakemelding.html
+++ b/nettsider/tilbakemelding.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tilbakemelding</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
-    <link rel="stylesheet" href="/style/styleFelles.css">
-    <link rel="stylesheet" href="/style/styleTilbakemelding.css">
+    <link rel="stylesheet" href="../style/styleFelles.css">
+    <link rel="stylesheet" href="../style/styleTilbakemelding.css">
 </head>
 <body>
     <div class="navbar">
@@ -69,8 +69,8 @@
     </form>
 
     <button type="submit">Send inn</button>
-    <script src="/script/scriptFelles.js"></script>
-    <script src="/script/scriptTilbakemelding.js"></script>
+    <script src="../script/scriptFelles.js"></script>
+    <script src="../script/scriptTilbakemelding.js"></script>
 </main>
 </body>
 </html>
