--- a/nettsider/leaderBoard.html
+++ b/nettsider/leaderBoard.html
@@ -14,14 +14,14 @@
 <body>
     <div class="navbar">
         <div class="logo">
-            <a href="/index.html"><img src="https://raw.githubusercontent.com/ImKennyYip/space-invaders/master/alien-magenta.png" alt="Angriperbilde" id="logoBilde"></a>
+            <a href="../index.html"><img src="https://raw.githubusercontent.com/ImKennyYip/space-invaders/master/alien-magenta.png" alt="Angriperbilde" id="logoBilde"></a>
 
             <i class="fa-solid fa-bars"></i>
         </div>
         <div class="nav"> 
-            <a href="/nettsider/spill.html">Spill</a>
-            <a href="/nettsider/leaderBoard.html">LeaderBoard</a>
-            <a href="/nettsider/tilbakemelding.html">Tilbakemelding</a>
+            <a href="spill.html">Spill</a>
+            <a href="#">LeaderBoard</a>
+            <a href="tilbakemelding.html">Tilbakemelding</a>
         </div>
     </div>
 
