--- a/nettsider/tilbakemelding.html
+++ b/nettsider/tilbakemelding.html
@@ -12,14 +12,14 @@
 <body>
     <div class="navbar">
         <div class="logo">
-            <a href="/index.html"><img src="https://raw.githubusercontent.com/ImKennyYip/space-invaders/master/alien-magenta.png" alt="Angriperbilde" id="logoBilde"></a>
+            <a href="../index.html"><img src="https://raw.githubusercontent.com/ImKennyYip/space-invaders/master/alien-magenta.png" alt="Angriperbilde" id="logoBilde"></a>
 
             <i class="fa-solid fa-bars"></i>
         </div>
         <div class="nav"> 
             <a href="spill.html">Spill</a>
             <a href="leaderBoard.html">LeaderBoard</a>
-            <a href="tilbakemelding.html">Tilbakemelding</a>
+            <a href="#">Tilbakemelding</a>
         </div>
     </div>
     <main>
