--- a/nettsider/leaderBoard.html
+++ b/nettsider/leaderBoard.html
@@ -19,9 +19,9 @@
             <i class="fa-solid fa-bars"></i>
         </div>
         <div class="nav"> 
-            <a href="spill.html">Spill</a>
+            <a href="/nettsider/spill.html">Spill</a>
             <a href="#">LeaderBoard</a>
-            <a href="tilbakemelding.html">Tilbakemelding</a>
+            <a href="/nettsider/tilbakemelding.html">Tilbakemelding</a>
         </div>
     </div>
 
