--- a/nettsider/tilbakemelding.html
+++ b/nettsider/tilbakemelding.html
@@ -17,8 +17,8 @@
             <i class="fa-solid fa-bars"></i>
         </div>
         <div class="nav"> 
-            <a href="spill.html">Spill</a>
-            <a href="leaderBoard.html">LeaderBoard</a>
+            <a href="/nettsider/spill.html">Spill</a>
+            <a href="/nettsider/leaderBoard.html">LeaderBoard</a>
             <a href="#">Tilbakemelding</a>
         </div>
     </div>
