--- a/nettsider/spill.html
+++ b/nettsider/spill.html
@@ -19,8 +19,8 @@
         </div>
         <div class="nav"> 
             <a href="#">Spill</a>
-            <a href="/nettsider/leaderBoard.html">LeaderBoard</a>
-            <a href="/nettsider/tilbakemelding.html">Tilbakemelding</a>
+            <a href="./leaderBoard.html">LeaderBoard</a>
+            <a href="./tilbakemelding.html">Tilbakemelding</a>
         </div>
     </div>
         <canvas id="brett"></canvas>
