--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <i class="fa-solid fa-bars"></i>
         </div>
         <div class="nav"> 
-            <a href=".nettsider/spill.html">Spill</a>
+            <a href="./nettsider/spill.html">Spill</a>
             <a href="./nettsider/leaderBoard.html">LeaderBoard</a>
             <a href="./nettsider/tilbakemelding.html">Tilbakemelding</a>
         </div>
