Siste endringer + kommentarer

--- a/nettsider/leaderBoard.html
+++ b/nettsider/leaderBoard.html
@@ -8,8 +8,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <link rel="stylesheet" href="../style/styleFelles.css">
     <link rel="stylesheet" href="../style/StyleLeaderBoard.css">
-
-
 </head>
 <body>
     <div class="navbar">
@@ -27,6 +25,7 @@
 
         <h1>World Ranking</h1>
 
+        <!-- Lager et tomt tabellelement som fylles opp med scores gjennom script -->
      <table id="leaderBoard">
         <thead>
             <tr>
