--- a/nettsider/tilbakemelding.html
+++ b/nettsider/tilbakemelding.html
@@ -22,55 +22,58 @@
             <a href="#">Tilbakemelding</a>
         </div>
     </div>
+
     <main>
-    <h1>Tilbakemelding</h1>
+        <h1>Tilbakemelding</h1>
 
-    <h2>Hvem er du?</h2>
-    <h3>Kjønn</h3>
-    <form action="">
-    <label for="">
-        <input type="radio" value="mann" name="kjonn" checked>Mann 
-    </label>
-    <label for="">
-        <input type="radio" name="kjonn" value="kvinne">Kvinne
-    </label>
-    <label for="">
-        <input type="radio" name="kjonn" value="annet">Annet
-    </label>
+        <h2>Hvem er du?</h2>
+            <h3>Kjønn</h3>
+                <form action="">
+                    <label for="">
+                    <input type="radio"  name="kjonn" value="mann"checked>Mann 
+                    </label>
+                    <label for="">
+                     <input type="radio" name="kjonn" value="kvinne">Kvinne
+                    </label>
+                    <label for="">
+                    <input type="radio" name="kjonn" value="annet">Annet
+                    </label>
 
-    <h3>Hvor har du hørt om spillet?</h3>
-    <label>
-        <input type="checkbox" value="skole">Skole
-    </label>
-    <label>
-        <input type="checkbox" value="venner">Venner
-    </label>
-    <label>
-        <input type="checkbox" value="familie">Familie
-    </label>
-    <label>
-        <input type="checkbox" value="nettet">Nettet 
-    </label>
-    <label>
-        <input type="checkbox" value="annet">Annet
-    </label>
+            <h3>Hvor har du hørt om spillet?</h3>
+                <label>
+                <input type="checkbox" value="skole">Skole
+                 </label>
+                <label>
+                 <input type="checkbox" value="venner">Venner
+                </label>
+                <label>
+                <input type="checkbox" value="familie">Familie
+                </label>
+                <label>
+                <input type="checkbox" value="nettet">Nettet 
+                </label>
+                <label>
+                 <input type="checkbox" value="annet">Annet
+                </label>
 
 
-    <h3>Ferdighetsnivå</h3>
-    <select>
-        <option value="pro">Pro</option>
-        <option selected value="medium">Medium</option>
-        <option value="noob">Noob</option>
-        <option value="fizzymama">FizzyMama</option>
-        </select>
+            <h3>Ferdighetsnivå</h3>
+                <select>
+                 <option value="pro">Pro</option>
+                 <option selected value="medium">Medium</option>
+                 <option value="noob">Noob</option>
+                 <option value="fizzymama">FizzyMama</option>
+                </select>
 
-        <h3>Hva kan forbedres?</h3>
-        <textarea cols="30" rows="5" placeholder="Annen informasjon.."></textarea>
+            <h3>Hva kan forbedres?</h3>
+                <textarea cols="30" rows="5" placeholder="Annen informasjon.."></textarea>
     </form>
 
     <button type="submit">Send inn</button>
-    <script src="../script/scriptFelles.js"></script>
-    <script src="../script/scriptTilbakemelding.js"></script>
 </main>
+
+    
+<script src="../script/scriptFelles.js"></script>
+<script src="../script/scriptTilbakemelding.js"></script>
 </body>
 </html>
